# VulkanFramework

./: Application.cpp  Application.h  CMakeLists.txt  README.md  RTXApplication.sln  RTXApplication.vcxproj  Setup.bat  Shader.h  Vertex.h  Vulkan-Framework.sln  Vulkan-Framework.vcxproj  Vulkan-Framework.vcxproj.filters  Vulkan-Renderer.sln  Vulkan-Renderer.vcxproj  Vulkan-Renderer.vcxproj.filters  VulkanFramework.cpp  VulkanFramework.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanUtils.cpp  VulkanUtils.h  test.bat
Shader/: compile-shader-manual.bat  compile-shader.bat  shader.frag.spv  shader.vert.spv  vert.spv
Shader/src/: shader.frag  shader.vert
include/: VulkanFramework.h  VulkanRenderer.h  VulkanUtils.h
src/: VulkanFramework.cpp  VulkanUtils.cpp
